Simplifying the function to get lists of variables and coefficients for linear constraints
Signed-off-by: jarchambault <jeanne.archambault@artelys.com>